--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 1rem 2rem;
   background-color: var(---bg);
+  margin-bottom: 2rem;
 
   ul {
     display: flex;
