--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -1,11 +1,27 @@
-.main-container {
-  display: flex;
-  //   tarpas tart cardu
-  gap: 2rem;
-  //   permesti i kita eilute jeigu netelpa i viena
-  flex-wrap: wrap;
-  max-width: 1200px;
-  margin: 0 auto;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+.main {
+  &-container {
+    display: flex;
+    //   tarpas tart cardu
+    gap: 2rem;
+    //   permesti i kita eilute jeigu netelpa i viena
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+  }
+
+  &-action-btn {
+    width: 100%;
+  }
+}
+.btn1 {
+  margin-right: 5px;
+  background-color: var(---tan);
+  border-radius: 1rem;
+  padding: 1rem;
+  cursor: pointer;
+  &:hover {
+    background-color: var(---maincol);
+  }
 }
