--- a/src/Components/SortButtons/sortButtons.scss
+++ b/src/Components/SortButtons/sortButtons.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   button {
-    background-color: var(---maincol);
+    background-color: var(---blue);
     border-radius: 5px;
     padding: 5px;
     margin: 2px;
