--- a/src/Components/Card/card.scss
+++ b/src/Components/Card/card.scss
@@ -1,12 +1,17 @@
-.card {
+.item {
   padding: 2rem;
   //   height: 10rem;
-  width: 14rem;
+  width: 15rem;
   box-shadow: #629c7047 1px 1px 19px 7px;
   &-image {
     position: relative;
     width: 100%;
     height: 15rem;
+    grid-template-rows: 1.5rem 1fr 2fr 2rem;
+    grid-template-areas:
+      'best'
+      'title'
+      'description';
   }
   img {
     width: 100%;
@@ -16,6 +21,17 @@
 
   h3 {
     color: var(---blue);
+  }
+  .favorite-icon {
+    color: rgb(229, 172, 172);
+    width: 1rem;
+    height: 1rem;
+    margin-left: auto;
+    cursor: pointer;
+
+    &--active {
+      color: blue;
+    }
   }
   button {
     border: 2px solid var(---bg);
