--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -1,7 +1,7 @@
 .nav-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
   padding: 1rem 2rem;
   background-color: var(---bg);
   margin-bottom: 2rem;
