--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -33,6 +33,8 @@
   align-items: center;
   margin-bottom: 20px;
   width: 100%;
+  margin-left: 2rem;
+  margin-right: 2rem;
 
   input {
     padding: 10px;
